Feat: Proposta começando com mydb;

--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -26,12 +26,7 @@
 			</div>
 			<div class="col-md-2">
 				<label for="operator">Operador</label>
-				<select class="form-control" id="operator" name="operator">
-					<option value="">Selecione...</option>
-					<option value="Operator 1">Operador 1</option>
-					<option value="Operator 2">Operador 2</option>
-					<!-- Adicione outras opções conforme necessário -->
-				</select>
+				<input type="text" class="form-control" id="operator" name="operator">
 			</div>
 			<div class="col-md-3">
 				<label for="lot">Lote</label>
