--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Relatório com Filtros</title>
-	<!-- Inclua o Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -19,10 +18,6 @@
 			<div class="col-md-2">
 				<label for="endDate">Data Final</label>
 				<input type="date" class="form-control" id="endDate" name="endDate">
-			</div>
-            <div class="col-md-3">
-				<label for="Ciclo">Ciclo</label>
-				<input type="text" class="form-control" id="ciclo" name="ciclo">
 			</div>
 			<div class="col-md-2">
 				<label for="operator">Operador</label>
@@ -40,7 +35,6 @@
 		</div>
 	</form>
 
-	<!-- Tabela para exibir os resultados -->
 	<div class="mt-4" id="reportDataCabecalho">
 		<table class="table">
 			<thead>
@@ -57,9 +51,7 @@
 				<th>PH Receita</th>
 			</tr>
 			</thead>
-			<tbody id="reportTableCabecalhoBody">
-			<!-- Os dados da tabela serão populados aqui -->
-			</tbody>
+			<tbody id="reportTableCabecalhoBody"></tbody>
 		</table>
 	</div>
 	<!-- Tabela para exibir os resultados -->
@@ -79,43 +71,37 @@
 				<th>PH</th>
 			</tr>
 			</thead>
-			<tbody id="reportTableBody">
-			<!-- Os dados da tabela serão populados aqui -->
-			</tbody>
+			<tbody id="reportTableBody"></tbody>
 		</table>
 	</div>
 
-        <!-- Adicione os botões para download -->
-    <div class="form-row mt-3">
-        <div class="col-md-2">
-            <button id="downloadPDF" class="btn btn-secondary btn-block">Baixar PDF</button>
-        </div>
-        <div class="col-md-2">
-            <button id="downloadExcel" class="btn btn-secondary btn-block">Baixar Excel</button>
-        </div>
-    </div>
+		<!-- Adicione os botões para download -->
+	<div class="form-row mt-3">
+		<div class="col-md-2">
+			<button id="downloadPDF" class="btn btn-secondary btn-block">Baixar PDF</button>
+		</div>
+		<div id="editor"></div>
+		<div class="col-md-2">
+			<button id="downloadExcel" class="btn btn-secondary btn-block">Baixar Excel</button>
+		</div>
+	</div>
 </div>
 
-<!-- Inclua o Bootstrap JS (opcional, para funcionalidades extras do Bootstrap) -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Inclua o jQuery (caso necessário para funcionalidades do Bootstrap) -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<!-- Inclua seu código JavaScript personalizado -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
 <script>
 	// Adicione seu código JavaScript para processar o formulário aqui
 	$('#filterForm').submit(function (e) {
 		e.preventDefault();
 
-		// Obtenha os valores dos campos do formulário
 		let startDate = $('#startDate').val();
 		let endDate = $('#endDate').val();
 		let operator = $('#operator').val();
 		let lot = $('#lot').val();
-
-		// Enviar os dados para o backend (você precisará de uma rota no Laravel para processar esses dados)
+		// validar();
 		$.ajax({
 			method: 'GET',
-			url: '/relatorio', // Substitua pelo seu endpoint no Laravel
+			url: '/relatorio',
 			data: {
 				startDate: startDate,
 				endDate: endDate,
@@ -123,70 +109,104 @@
 				lote: lot
 			},
 			success: function (response) {
-                debugger
-				fillTable();
+				fillTable(response);
 			},
 			error: function (error) {
-                debugger
+				debugger
 				console.error(error);
 			}
 		});
 	});
 
-	// Simulação de uma resposta bem-sucedida do backend com os dados da tabela
-	function fillTable(data) {
-		let tableBody = $('#reportTableBody');
-		tableBody.empty(); // Limpa o conteúdo atual da tabela
+	function getValueRow(data, dataIni, dataFim, indice) {
 
-		// Preenche a tabela com os dados recebidos
-		data.forEach(function (row) {
-			let rowHtml = `<tr>
-								<td>${row.dataIni}</td>
-								<td>${row.dataFim}</td>
-								<td>${row.timeExecucao}</td>
-								<td>${row.timeIna}</td>
-								<td>${row.fase}</td>
-								<td>${row.dataHora}</td>
-								<td>${row.rotacao}</td>
-								<td>${row.temperatura}</td>
-								<td>${row.ph}</td>
-						   </tr>`;
-			tableBody.append(rowHtml);
-		});
+
 	}
 
-	// Chamada de função para preencher a tabela (apenas para simulação)
-	fillTable(sampleData);
+	function fillTable(data) {
+		if (data.length === 0) {
+			alert('Nenhum registro encontrado');
+			return;
+		}
+		var fases = [];
 
-       // Adicione os eventos de clique para os botões de download
-       $('#downloadPDF').on('click', function() {
-        downloadPDF();
-    });
 
-    $('#downloadExcel').on('click', function() {
-        downloadExcel();
-    });
+		for (index in data) {
+			for (index2 in data[index]['Fase']) {
+				fases.push({'fase': index2, 'valorMin': data[index]['Fase'][index2][0], 'valorMax': data[index]['Fase'][index2].pop()});
+			}
 
-    // Função para baixar em PDF
-    function downloadPDF() {
-        const pdf = new jsPDF();
-        const table = document.getElementById('reportData').querySelector('table');
 
-        // Cria PDF a partir da tabela
-        pdf.autoTable({ html: table });
+			debugger
+			let reportTableCabecalhoBody = $('#reportTableCabecalhoBody');
+			reportTableCabecalhoBody.empty();
+			Object.values(data).forEach(function (row) {
+				debugger
+				let rowHtml = `<tr>
+									<td>${row.NomeUsuario}</td>
+									<td>${row.Ciclo_ok_nok}</td>
+									<td>${row.Nome_receita}</td>
+									<td>${row.Num_Lote}</td>
+									<td>${row.ID_Dorna}</td>
+									<td>${row.dataMin}</td>
+									<td>${row.dataMax}</td>
+									<td>${row.velocidadeReceita}</td>
+									<td>${row.temperaturaReceita}</td>
+									<td>${row.phReceita}</td>
+							</tr>`;
+				reportTableCabecalhoBody.append(rowHtml);
+			});
 
-        // Salva o PDF
-        pdf.save('relatorio.pdf');
-    }
 
-    // Função para baixar em Excel
-    function downloadExcel() {
-        TableExport(document.getElementById('reportData').querySelector('table'), {
-            formats: ['xlsx'],
-            filename: 'relatorio',
-            exportButtons: false
-        }).export();
-    }
+
+			let tableBody = $('#reportTableBody');
+			tableBody.empty();
+
+			$i = 1;
+			Object.values(fases).forEach(function (row) {
+				debugger
+				let rowHtml = `<tr>
+									<td>${row.dataMin}</td>
+									<td>${row.dataMax}</td>
+									<td>${getValueRow(data[index], row.dataMin, row.dataMax, 'Tempo_execucao')}</td>
+									<td><td>${getValueRow(data[index], row.dataMin, row.dataMax, 'Tempo_inativo')}</td>
+									<td>${row.fase}</td>
+									<td>${getValueRow(data[index], row.dataMin, row.dataMax, 'DateAndTime')}</td>
+									<td>${getValueRow(data[index], row.dataMin, row.dataMax, 'rotacao')}</td>
+									<td>${getValueRow(data[index], row.dataMin, row.dataMax, 'temperatura')}</td>
+									<td>${getValueRow(data[index], row.dataMin, row.dataMax, 'ph')}</td>
+							</tr>`;
+				$i++;
+				tableBody.append(rowHtml);
+			});
+		}
+	}
+
+	var doc = new jsPDF('l', 'mm', 'a4');
+	$('#downloadPDF').on('click', function() {
+		$.ajax({
+			url: '/impressao',
+			method: 'GET',
+			success: function(response) {
+				var customHtml = response;
+				var options = {
+					pagesplit: true // Permite que o conteúdo seja dividido em várias páginas, se necessário
+				};
+				doc.fromHTML(response, 40, 15, {
+					'width': 170
+				});
+				doc.save('exemplo-pdf.pdf');
+			},
+			error: function(error) {
+				console.error(error);
+			}
+		});
+	});
+
+	$('#downloadExcel').on('click', function() {
+		downloadExcel();
+	});
+
 </script>
 </body>
 </html>
