--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -3,56 +3,67 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Relatório com Filtros</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link href="bootstrap-4.1.3-dist/css/bootstrap.css" rel="stylesheet">
+	<link href="assets/bootstrap-datepicker.css"  rel="stylesheet">
+	<link href="assets/app.css"  rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
+	<script src="assets/jquery.js"></script>
+	<script src="assets/datepicker.js"></script>
+	<script src="assets/datepicker.pt-br.js"></script>
+	<script src="bootstrap-4.1.3-dist/js/bootstrap.js"></script>
+	<script src="assets/moment.js"></script>
 </head>
 <body>
 
 <div class="container mt-4">
-	<h2>Relatório com Filtros</h2>
-	<form id="filterForm">
-		<div class="form-row">
-			<div class="col-md-3 mb-3">
-				<label for="startDate">Data Inicial</label>
-				<input type="date" class="form-control" id="startDate" name="startDate" placeholder="Data Inicial">
+	<div class="alert alert-dark head" role="alert">
+		<H5 class="breadcrumb-item active" aria-current="page">Relatório</H5>
+		<form id="filterForm" style="margin-top: 40px;">
+			<div class="form-row">
+				<div class="col-md-2 mb-2">
+					<label for="startDate" id="datas">Data Inicial<i class="bi bi-calendar"></i></label>
+					<input class="form-control" id="startDate" name="startDate" placeholder="Data Inicial" autocomplete="off">
+				</div>
+				<div class="col-md-2 mb-2">
+					<label for="endDate">Data Final</label>
+					<input class="form-control" id="endDate" name="endDate" placeholder="Data Final" autocomplete="off">
+				</div>
+				<div class="col-md-3 mb-3">
+					<label for="operator">Operador</label>
+					<input type="text" class="form-control" id="operator" name="operator" autocomplete="off">
+				</div>
+				<div class="col-md-3 mb-3">
+					<label for="lot">Lote</label>
+					<input type="text" class="form-control" id="lot" name="lot" autocomplete="off">
+				</div>
+				<div class="col-md-2 mb-2 btng">
+					<button type="submit" class="btn btn-primary btn-block btns">Gerar Relatório</button>
+				</div>
 			</div>
-			<div class="col-md-3 mb-3">
-				<label for="endDate">Data Final</label>
-				<input type="date" class="form-control" id="endDate" name="endDate" placeholder="Data Final">
+		</form>
+		<div class="form-row mt-3">
+			<div class="col-md-2">
+				<button id="downloadPDF" class="btn btn-secondary btn-block">Baixar PDF</button>
 			</div>
-			<div class="col-md-3 mb-3">
-				<label for="operator">Operador</label>
-				<input type="text" class="form-control" id="operator" name="operator">
-			</div>
-			<div class="col-md-3 mb-3">
-				<label for="lot">Lote</label>
-				<input type="text" class="form-control" id="lot" name="lot">
+			<div id="editor"></div>
+			<div class="col-md-2">
+				<button id="downloadExcel" class="btn btn-secondary btn-block">Baixar Excel</button>
 			</div>
 		</div>
-		<div class="form-row">
-			<div class="col-md-3">
-				<button type="submit" class="btn btn-primary btn-block">Gerar Relatório</button>
-			</div>
-		</div>
-	</form>
-
+	</div>
 
 	<div class="mt-4" id="reportDataCabecalho"></div>
 	<div class="mt-4" id="reportTableBody"></div>
-	<!-- <div class="form-row mt-3">
-		<div class="col-md-2">
-			<button id="downloadPDF" class="btn btn-secondary btn-block">Baixar PDF</button>
-		</div>
-		<div id="editor"></div>
-		<div class="col-md-2">
-			<button id="downloadExcel" class="btn btn-secondary btn-block">Baixar Excel</button>
-		</div>
-	</div> -->
+	<div class="mt-4" id="reportTableAlarme"></div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
-<script src="../css/app.css"></script>
 <script>
+		$(document).ready(function(){
+			$('#startDate, #endDate').datepicker({
+			language: 'pt-BR'
+			});
+		});
+
 	$('#filterForm').submit(function (e) {
 		e.preventDefault();
 		let startDate = $('#startDate').val();
@@ -85,127 +96,230 @@
 			return;
 		}
 		var fases = [];
-
+		$('#reportTableBody, #reportDataCabecalho, #reportTableAlarme').empty();
 		for (index in data) {
 			for (index2 in data[index]['Fase']) {
-				fases.push({'fase': index2, 'valorMin': data[index]['Fase'][index2][0], 'valorMax': data[index]['Fase'][index2].pop()});
+				fases.push({'lote': index, 'fase': index2, 'valorMin': data[index]['Fase'][index2][0], 'valorMax': data[index]['Fase'][index2].pop()});
 			}
-			$('#reportTableCabecalhoBody, #reportDataCabecalho').empty();
-			Object.values(data).forEach(function (row) {
-				let table = $('<table>', { class: 'table' }).append(
-					$('<thead>').append(
-						$('<tr>').append(
-							$('<th>', { text: 'Usuário' }),
-							$('<th>', { text: 'Status ciclo' }),
-							$('<th>', { text: 'Receita' }),
-							$('<th>', { text: 'Lote' }),
-							$('<th>', { text: 'Reator' }),
-							$('<th>', { text: 'Data inicial Batelada' }),
-							$('<th>', { text: 'Data final Batelada' }),
-							$('<th>', { text: 'Velocidade receita' }),
-							$('<th>', { text: 'Temperatura receita' }),
-							$('<th>', { text: 'PH Receita' })
-						)
-					),
-					$('<tbody>', { id: 'reportTableCabecalhoBody' })
-				);
-
-				$('#reportDataCabecalho').append(table);
-
-				let rowHtml = $('<tr>').append(
-					$('<td>', { text: row.NomeUsuario }),
-					$('<td>', { text: row.Ciclo_ok_nok }),
-					$('<td>', { text: row.Nome_receita }),
-					$('<td>', { text: row.Num_Lote }),
-					$('<td>', { text: row.ID_Dorna }),
-					$('<td>', { text: row.dataMin }),
-					$('<td>', { text: row.dataMax }),
-					$('<td>', { text: row.Veloc_receita }),
-					$('<td>', { text: row.Temperatura_receita }),
-					$('<td>', { text: row.PH_receita })
-				);
-
-				$('#reportTableCabecalhoBody').append(rowHtml);
-
-				$('#reportTableBody').empty();
-				i = 1;
-				Object.values(fases).forEach(function (row) {
-					debugger
-					let headerRowHtml = $('<table>', { class: 'table', 'id': i}).append(
-						$('<thead>').append(
-							$('<th>', { text: 'Fase' }),
-							$('<th>', { text: 'Data e hora inicial' }),
-							$('<th>', { text: 'Data e hora final' }),
-							$('<th>', { text: 'Tempo de execução' }),
-							$('<th>', { text: 'Tempo de inatividade' }),
-							$('<th>', { text: 'Data e Hora' }),
-							$('<th>', { text: 'Rotação' }),
-							$('<th>', { text: 'Temperatura' }),
-							$('<th>', { text: 'PH' })
-						),
-						$('<tbody>', { id: 'tableBody' }).append(
-							getValueRow(row.fase, row.valorMin, row.valorMax, data, i)
-						)
-					);
-					$('#reportTableBody').append(headerRowHtml);
-					i++;
-				});
-			});
 		}
+
+		Object.values(data).forEach(function (row) {
+			debugger
+			let filteredData = Object.keys(data)
+				.filter(key => key == row.Num_Lote)
+				.reduce((obj, key) => {
+					obj[key] = data[key];
+					return obj;
+				}, {});
+			buildReportData(row, fases.filter(fase => fase.lote === row.Num_Lote), filteredData);
+			buildAlarmeTable(row.Alarme);
+		});
+	}
+
+	function buildAlarmeTable(data) {
+		$('#reportDataCabecalho').append(
+			$('<h5>', { text: 'Alarmes', class: 'alert alert-secondary', role:'alert', style: 'text-align: center;' })
+		);
+		let table = $('<table>', { class: 'table' }).append(
+			$('<thead>').append(
+				$('<tr>', { class: 'alert alert-secondary', role:'alert'}).append(
+					$('<th>', { text: 'Data' }),
+					$('<th>', { text: 'Mensagem' }),
+					$('<th>', { text: 'Condição' })
+				)
+			),
+			$('<tbody>', { class: 'reportTableAlarmeBody' })
+		);
+
+		$('#reportDataCabecalho').append(table);
+
+		Object.values(data).forEach(function (row) {
+			let rowHtml = $('<tr>').append(
+				$('<td>', { text: formatDataBrz(row.EventTimeStamp), style: 'width: 150px' }),
+				$('<td>', { text: row.Message, style: 'width: 100px word-wrap: break-word;' }),
+				$('<td>', { text: row.ConditionName, style: 'width: 150px;  word-wrap: break-word;' }),
+			);
+
+			$('.reportTableAlarmeBody').append(rowHtml);
+		});
 	}
 
 	function getValueRow(fase, dataIni, dataFim, data, indice) {
 		var rows = [];
 		var firstRow = true;
-		var cells = [];
+		var cellsTemplate = [
+			$('<td>', { style: 'width: 150px;  word-wrap: break-word;' }),
+			$('<td>', { style:'width: 150px;' }),
+			$('<td>', { style:'width: 150px;' }),
+			$('<td>', { style:'width: 80px; text-align: end;' }),
+			$('<td>', { style:'width: 80px; text-align: end;' }),
+			$('<td>', { style:'width: 150px;' }),
+			$('<td>', { style: 'width: 100px;text-align: end;' }),
+			$('<td>', { style: 'width: 100px;text-align: end;' }),
+			$('<td>', { style: 'width: 100px;text-align: end;' })
+		];
 		for (index in data) {
+			var i = 1;
 			for (index2 in data[index]['PH']) {
 				if (index2 >= dataIni || index2 <= dataFim) {
-					var cells = [
-						$('<td>', { text: indice +'°  ' + fase }),
-						$('<td>', { text: dataIni }),
-						$('<td>', { text: dataFim }),
-						$('<td>', { text: data[index]['Tempo_execucao'][index2] }),
-						$('<td>', { text: data[index]['Tempo_inativo'][index2] }),
-						$('<td>', { text: index2 }),
-						$('<td>', { text: data[index]['Velocidade'][index2] }),
-						$('<td>', { text: data[index]['Temperatura'][index2] }),
-						$('<td>', { text: data[index]['PH'][index2] })
-					];
+					var cells = cellsTemplate.map(function(cell) { return cell.clone(); });
+					cells[0].text(i == 1 ? indice +'°  ' + fase : '');
+					cells[1].text(i == 1 ? formatDataBrz(dataIni) : '');
+					cells[2].text(i == 1 ? formatDataBrz(dataFim) : '');
+					cells[3].text(data[index]['Tempo_execucao'][index2]);
+					cells[4].text(data[index]['Tempo_inativo'][index2]);
+					cells[5].text(formatDataBrz(index2));
+					cells[6].text(parseInt(data[index]['Velocidade'][index2]));
+					cells[7].text(parseInt(data[index]['Temperatura'][index2]));
+					cells[8].text(parseInt(data[index]['PH'][index2]));
 					rows.push($('<tr>').append(cells));
-					var firstRow = false;
+					firstRow = false;
+					i = i+1;
 				}
 			}
 		}
 
 		return rows;
 	}
+	function buildReportData(row, fases, data) {
+		$('#reportDataCabecalho').append(
+			$('<h5>', { text: 'Lote: ' + row.Num_Lote, class: 'alert alert-secondary', role:'alert', style: 'text-align: center;' })
+		);
+		let table = $('<table>', { class: 'table' });
+		let thead = $('<thead>');
+		let tbody = $('<tbody>', { class: 'reportTableCabecalhoBody' });
+		let tr = $('<tr>', { class: 'alert alert-secondary', role:'alert'});
+		let ths = [
+			$('<th>', { text: 'Usuário'}),
+			$('<th>', { text: 'Status ciclo' }),
+			$('<th>', { text: 'Receita' }),
+			$('<th>', { text: 'Lote' }),
+			$('<th>', { text: 'Reator' }),
+			$('<th>', { text: 'Data inicial Batelada', style:'width: 150px;' }),
+			$('<th>', { text: 'Data final Batelada', style:'width: 150px;' }),
+			$('<th>', { text: 'Velocidade', style:'width: 80px;' }),
+			$('<th>', { text: 'Temperatura', style:'width: 100px;' }),
+			$('<th>', { text: 'PH', style:'width: 80px; text-align: end;' })
+		];
 
-	var doc = new jsPDF('l', 'mm', 'a4');
-	$('#downloadPDF').on('click', function() {
-		$.ajax({
-			url: '/impressao',
-			method: 'GET',
-			success: function(response) {
-				var customHtml = response;
-				var options = {
-					pagesplit: true // Permite que o conteúdo seja dividido em várias páginas, se necessário
-				};
-				doc.fromHTML(response, 40, 15, {
-					'width': 170
-				});
-				doc.save('exemplo-pdf.pdf');
-			},
-			error: function(error) {
-				console.error(error);
-			}
+		tr.append(ths);
+		thead.append(tr);
+		table.append(thead, tbody);
+		$('#reportDataCabecalho').append(table);
+
+		let rowHtml = $('<tr>').append(
+			$('<td>', { text: row.NomeUsuario, style: 'width: 150px;  word-wrap: break-word;' }),
+			$('<td>', { text: row.Ciclo_ok_nok, style: 'width: 100px word-wrap: break-word;' }),
+			$('<td>', { text: row.Nome_receita, style: 'width: 100px word-wrap: break-word;' }),
+			$('<td>', { text: row.Num_Lote, style: 'width: 100px word-wrap: break-word;' }),
+			$('<td>', { text: row.ID_Dorna, style: 'width: 100px word-wrap: break-word;' }),
+			$('<td>', { text: formatDataBrz(row.dataMin), style: 'width: 150px' }),
+			$('<td>', { text: formatDataBrz(row.dataMax), style: 'width: 150px' }),
+			$('<td>', { text: row.Veloc_receita, style: 'width: 80px;text-align: end;' }),
+			$('<td>', { text: row.Temperatura_receita, style: 'width: 80px;text-align: end;' }),
+			$('<td>', { text: row.PH_receita, style: 'width: 80px;text-align: end;' })
+		);
+
+		tbody.append(rowHtml);
+
+		let i = 1;
+		let tables = [];
+		$('#reportDataCabecalho').append(
+			$('<h5>', { text: 'Fases', style: 'text-align: center;', class: 'alert alert-secondary', role: 'alert' })
+		);
+		Object.values(fases).forEach(function (row) {
+			let headerRowHtml = $('<table>', { class: 'table', 'id': i}).append(
+				$('<thead>', { class: 'alert alert-secondary', role: 'alert'}).append(
+					$('<th>', { text: 'Fase', style: 'width: 150px;  word-wrap: break-word;' }),
+					$('<th>', { text: 'Data inicial', style:'width: 150px;' }),
+					$('<th>', { text: 'Data final', style:'width: 150px;' }),
+					$('<th>', { text: 'Tempo de execução', style: 'width: 100px;' }),
+					$('<th>', { text: 'Tempo de inatividade',  style: 'width: 100px;' }),
+					$('<th>', { text: 'Data e Hora' }),
+					$('<th>', { text: 'Rotação', style: 'width: 100px;text-align: end;' }),
+					$('<th>', { text: 'Temperatura', style: 'width: 150px;text-align: end;' }),
+					$('<th>', { text: 'PH', style: 'width: 100px; text-align: end;' })
+				),
+				$('<tbody>', { class: 'tableBody' }).append(
+					getValueRow(row.fase, row.valorMin, row.valorMax, data, i)
+				)
+			);
+			tables.push(headerRowHtml);
+			i++;
 		});
-	});
 
-	$('#downloadExcel').on('click', function() {
-		downloadExcel();
-	});
+		$('#reportDataCabecalho').append(tables);
+	}
+
+	// var doc = new jsPDF('l', 'mm', 'a4');
+	// $('#downloadPDF').on('click', function() {
+	// 	$.ajax({
+	// 		url: '/impressao',
+	// 		method: 'GET',
+	// 		success: function(response) {
+	// 			var customHtml = response;
+	// 			var options = {
+	// 				pagesplit: true // Permite que o conteúdo seja dividido em várias páginas, se necessário
+	// 			};
+	// 			doc.fromHTML(response, 40, 15, {
+	// 				'width': 170
+	// 			});
+	// 			doc.save('exemplo-pdf.pdf');
+	// 		},
+	// 		error: function(error) {
+	// 			console.error(error);
+	// 		}
+	// 	});
+	// });
+
+	// $('#downloadExcel').on('click', function() {
+	// 	downloadExcel();
+	// });
+
+		function formatDataBrz(dt) {
+			if (dt === "0000-00-00" || dt === "0000-00-00 00:00:00") {
+				return "";
+			}
+			if (dt !== '') {
+				var yr = dt.substr(0, 4);
+				var mo = dt.substr(5, 2);
+				var da = dt.substr(8, 2);
+				var hr = dt.substr(11, 2);
+				var mi = dt.substr(14, 2);
+
+				return da + '/' + mo + '/' + yr +' '+ hr + ':' + mi;
+			} else {
+				return dt;
+			}
+		}
+
+		function nroBraDecimais(nro, decimais) {
+			nro = (nro + '').replace(/[^0-9+\-Ee.]/g, '');
+			var n = (!isFinite(+nro) ? 0 : +nro);
+			var	prec = (!isFinite(+decimais) ? 0 : Math.abs(decimais));
+			var s = (prec ? toFixedFix(n, prec) : '' + Math.round(n)).split('.');
+
+			if (s[0].length > 3) {
+				s[0] = s[0].replace(/\B(?=(?:\d{3})+(?!\d))/g, '.');
+			}
+
+			s[1] = s[1] || '';
+			if (s[1].length < prec) {
+				s[1] += new Array(prec - s[1].length + 1).join('0');
+			}
+
+			return s.join(prec ? ',' : '');
+		}
+
+		function toFixedFix(n, prec, parse) {
+			var k = Math.pow(10, prec);
+			var number = Math.round(Math.abs(n) * k) / k;
+			var s = (n < 0 && number != 0 ? '-' : '') + number;
+
+			return (parse ? parseFloat(s) : s);
+		}
 
 </script>
 </body>
 </html>
+
