--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -6,16 +6,15 @@
 	<link href="bootstrap-4.1.3-dist/css/bootstrap.css" rel="stylesheet">
 	<link href="assets/bootstrap-datepicker.css"  rel="stylesheet">
 	<link href="assets/app.css"  rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
 	<script src="assets/jquery.js"></script>
 	<script src="assets/datepicker.js"></script>
 	<script src="assets/datepicker.pt-br.js"></script>
 	<script src="bootstrap-4.1.3-dist/js/bootstrap.js"></script>
 	<script src="assets/moment.js"></script>
 	<script src="assets/relatorio.js"></script>
-
-
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+	<script src="assets/jsPDF.js"></script>
+	<script src="assets/jsPDFTable.js"></script>
+	<link href="assets/css2.css"  rel="stylesheet">
 </head>
 <body>
 
@@ -50,11 +49,11 @@
 				</div>
 			</div>
 		</form>
-		<div class="form-row mt-3">
+		<!-- <div class="form-row mt-3">
 			<div class="col-md-2">
 				<button id="downloadPDF" class="btn btn-secondary btn-block btns">Baixar PDF</button>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="container spinner-div" style="display: none;justify-content: center; padding: 20px;">
