Feat: Keyboard e ajustes;

--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -15,9 +15,10 @@
 	<script src="assets/jsPDF.js"></script>
 	<script src="assets/jsPDFTable.js"></script>
 	<link href="assets/css2.css"  rel="stylesheet">
+	<script src="assets/keyboard.js"></script>
+	<link href="assets/keyboard.css"  rel="stylesheet">
 </head>
 <body>
-
 <div class="container mt-4">
 	<div class="col-md-3 mb-3">
 		<div>
