--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -20,9 +20,16 @@
 </head>
 <body>
 <div class="container mt-4">
-	<div class="col-md-3 mb-3">
-		<div>
-			<img src="assets/img.png" alt="Logo FioCruz" style="height: 60px;">
+	<div class="col-md-12 mb-12" style="display: flex;">
+		<div class="col-md-6 mb-6">
+			<div style="display: flex;justify-content: initial;margin-bottom: 6px;">
+				<img src="assets/img.png" alt="Logo FioCruz" style="height: 60px">
+			</div>
+		</div>
+		<div class="col-md-6 mb-6">
+			<div style="display: flex;justify-content: end;margin-bottom: 6px;">
+				<img src="assets/img2.png" alt="Logo FioCruz" style="height: 60px">
+			</div>
 		</div>
 	</div>
 	<div class="alert alert-dark head" role="alert">
