Adiciona id em relatorio;

--- a/resources/views/relatorio.html
+++ b/resources/views/relatorio.html
@@ -32,7 +32,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="alert alert-dark head" role="alert">
+	<div id="filtros" class="alert alert-dark head" role="alert">
 		<H5 class="breadcrumb-item active" aria-current="page">Relatório</H5>
 		<form id="filterForm" style="margin-top: 40px;">
 			<div class="form-row">
